hphp/test/zend/good/Zend/tests/bug65784.php.expectf
string(9) "not catch"
NULL

Fatal error: Class undefined: NotExists in %s/bug65784.php on line 35
